Add GUI  (place files with drag and drop)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,17 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set (BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
 find_package(Qt5 COMPONENTS Widgets Gui REQUIRED)
 
-include_directories("reader")
+include_directories("reader" "other" "viewer")
+
+set(VIEWER
+    viewer/mainwindow.h
+    viewer/mainwindow.cpp
+    viewer/mainwindow.ui
+    )
 
 set(READER
     reader/rawdata.h
@@ -25,13 +32,27 @@ set(READER
     reader/sourcefilereader.cpp
     )
 
+set(OTHER
+    other/debugcatcher.h
+    other/debugcatcher.cpp
+    )
+
+set(RESOURCES
+    resources/data.qrc
+    resources/rcIco.rc
+)
+
 add_executable(${PROJECT_NAME} WIN32
     main.cpp
-    mainwindow.cpp
-    mainwindow.h
-    mainwindow.ui
 
+    ${VIEWER}
     ${READER}
+    ${OTHER}
+    ${RESOURCES}
   )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Widgets Qt5::Gui)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${BUILD_DIR}
+    )
