now step 2 work fine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ set(READER
 set(PATHWALK
     pathwalk/prepareddata.h
     pathwalk/prepareddata.cpp
+    pathwalk/patherrordetector.h
+    pathwalk/patherrordetector.cpp
     )
 
 set(OTHER
