add not working creater

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,8 @@ set(PATHWALK
     pathwalk/prepareddata.cpp
     pathwalk/patherrordetector.h
     pathwalk/patherrordetector.cpp
+    pathwalk/movestopathconverter.h
+    pathwalk/movestopathconverter.cpp
     )
 
 set(OTHER
