--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(VIEWER
     viewer/ignoredndgraphicsview.cpp
     viewer/graphicsviewzoomer.h
     viewer/graphicsviewzoomer.cpp
+    viewer/graphicsitems/distancemodificator.h
     viewer/graphicsitems/graphicsiteminterface.h
     viewer/graphicsitems/tracgraphicsitem.h
     viewer/graphicsitems/tracgraphicsitem.cpp
